--- a/app/assets/stylesheets/less/_reponsive.less
+++ b/app/assets/stylesheets/less/_reponsive.less
@@ -393,6 +393,26 @@
 }
 
 @media all and (max-width:1199px){
+    .attachment-files {
+        .attachment-files-header {
+            .header-file-name {
+                max-width: 200px;
+            }
+            .header-size {
+                max-width: 80px;
+            }
+        }
+        .attachment-file-detail {
+            .file-name {
+                max-width: 200px;
+                font-size: 12px;
+                word-break: break-all;
+            }
+            .file-size {
+                max-width: 80px;
+            }
+        }
+    }
     .unsupported {
         width: 100%;
         max-width: 1199px;
