--- a/app/views/index/index.scala.html
+++ b/app/views/index/index.scala.html
@@ -1,27 +1,14 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2012 NAVER Corp.
-* http://yobi.io
-*
-* @author Sangcheol Hwang
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp.
+* https://yona.io
 **@
 @(currentUser:models.User)
 
 @import utils.TemplateHelper._
 @import utils.JodaDateUtil
+@import utils.MenuType._
 
 @siteLayout(utils.Config.getSiteName, utils.MenuType.SITE_HOME) {
     @if(currentUser == User.anonymous){
@@ -66,14 +53,7 @@
             <div class="page on-fold-intro">
                 <div class="row-fluid content-container">
                     <div class="span8 main-stream hide-in-mobile">
-                         <ul class="nav nav-tabs">
-                            <li class="active">
-                                <a href="@routes.Application.index()">@Messages("notification")</a>
-                            </li>
-                            <li>
-                                <a href="@routes.IssueApp.userIssues()">@Messages("issue.myIssue")</a>
-                            </li>
-                        </ul>
+                        @views.html.common.mySeriesMenuTab(TAB_NOTI)
                         <ul class="activity-streams notification-wrap unstyled">
                             @partial_notifications(0, 20)
                         </ul>
