--- a/app/views/issue/my_list.scala.html
+++ b/app/views/issue/my_list.scala.html
@@ -1,36 +1,20 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2014 NAVER Corp.
-* http://yobi.io
-*
-* @author Suwon Chae
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp.
+* https://yona.io
 **@
 @(title: String, currentPage: com.avaje.ebean.Page[Issue], param:
 models.support.SearchCondition, project:Project)
 
+@import utils.MenuType._
 @siteLayout(utils.Config.getSiteName, utils.MenuType.SITE_HOME) {
     <div>
         <button class="btn-transparent" id="toggleIntro"></button>
     </div>
     <div class="page-wrap-outer">
         <div class="page-wrap">
-            <ul class="nav nav-tabs">
-                <li><a href="@routes.Application.index()">@Messages("notification")</a></li>
-                <li class="active"><a href="@routes.IssueApp.userIssues()">@Messages("issue.myIssue")</a></li>
-            </ul>
+            @views.html.common.mySeriesMenuTab(TAB_MY_ISSUES)
 
             @views.html.issue.my_partial_search(title, currentPage, param, project)
         </div>
