markdown: Make markdown files to refer code repository files directly
See: github issue #124

--- a/app/views/code/partial_view_file.scala.html
+++ b/app/views/code/partial_view_file.scala.html
@@ -110,7 +110,7 @@
           @if(isMarkdownExtension(path)) {
           <div id="codeVal" class="markdown-wrap codebrowser-markdown">
             @if(files.get("data") != null){
-            @Html(Markdown.render(fieldText(files, "data"), project))
+            @Html(Markdown.renderFileInCodeBrowser(fieldText(files, "data"), project))
             }
           </div>
           } else {
