--- a/app/views/index/partial_intro.scala.html
+++ b/app/views/index/partial_intro.scala.html
@@ -18,7 +18,7 @@
 * See the License for the specific language governing permissions and
 * limitations under the License.
 **@
-<div class="siteintro-bg">
+<div class="siteintro-bg row">
 <div class="siteintro">
     <div class="siteintro-cover">
         <div class="siteintro-wrap">
@@ -36,7 +36,7 @@
 </div>
 <div class="feature">
     <h2><span>@Messages("title.features")</span></h2>
-    <ul class="feature-wrap">
+    <ul class="feature-wrap row">
         <li>
             <div class="feature-image"><i class="yobicon-cgicenter"></i></div>
             <div class="feature-info">
