--- a/app/assets/stylesheets/less/_reponsive.less
+++ b/app/assets/stylesheets/less/_reponsive.less
@@ -377,13 +377,17 @@
     .siteintro .siteintro-cover {
         overflow: inherit;
         width: inherit;
+        .site-heading {
+            font-size: 22px;
+            padding-left: 20px;
+        }
     }
     .feature-wrap {
         width: inherit !important;
         li {
             width: 95% !important;
             margin-top: 10px !important;
-            margin-left: 0 !important;
+            margin-left: 10px !important;
         }
     }
 
