--- a/app/views/layout.scala.html
+++ b/app/views/layout.scala.html
@@ -12,7 +12,7 @@
 <meta charset="utf-8">
 <title>@titleArray(0)</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta property="og:title" content="@titleArray(0)" />
 <meta property="og:url" content="@play.mvc.Http.Context.current().request().path()" />
