my-files: Show link of attachments belongs

--- a/app/assets/stylesheets/less/_reponsive.less
+++ b/app/assets/stylesheets/less/_reponsive.less
@@ -398,6 +398,7 @@
 
 @media all and (max-width:1199px){
     .attachment-files {
+        font-size: 12px;
         .attachment-files-header {
             .header-file-name {
                 max-width: 200px;
@@ -414,6 +415,10 @@
             }
             .file-size {
                 max-width: 80px;
+                font-size: 12px;
+            }
+            .file-location {
+                font-size: 12px;
             }
         }
     }
