--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6554,7 +6554,7 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
             margin-left: auto;
             img {
                 border: 1px solid #333;
-                max-width: 140px;
+                max-width: 70px;
                 box-sizing: border-box;
             }
         }
@@ -6576,7 +6576,10 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
         }
 
         .file-location {
-            text-align: center;
+            text-align: left;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
         }
     }
     .hover {
