markdown: Add table td min width

--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -218,11 +218,13 @@
       padding:5px;
       border:1px solid #dcddde;
       background-color:#f7f7f7;
+      min-width: 45px;
     }
 
     td {
       padding:5px;
       border:1px solid #dcddde;
+      word-break: break-all;
     }
 
   }
