watcher-list: Make watcher list to work as ajax

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6494,7 +6494,7 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
 }
 
 .show-watchers {
-    display: inline-block;
+    display: none;
     margin-left: 3px;
     &:hover {
         cursor: pointer;
