--- a/app/views/board/view.scala.html
+++ b/app/views/board/view.scala.html
@@ -102,7 +102,7 @@
             }
     	</div>
 
-        <div class="watcher-list">@Html(watcherList(post))</div>
+        <div class="watcher-list"></div>
     	@** Comment **@
     	<div id="comments" class="board-comment-wrap">
             @partial_comments(project, post)
@@ -142,6 +142,7 @@
 <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("javascripts/lib/atjs/jquery.atwho.css")">
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/atjs/jquery.caret.min.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/atjs/jquery.atwho.js")"></script>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/common/yobi.WatcherList.js")"></script>
 <script type="text/javascript">
 	$(document).ready(function(){
 		$yobi.loadModule("board.View", {
@@ -181,9 +182,14 @@
         // detect comment which contains mention at me
         $(".comment-body:contains('@UserApp.currentUser().loginId')").closest(".comment").addClass("mentioned");
 
-        $(".show-watchers").on("click", function(){
-            $(".watcher-list").toggle();
-        })
+        // Watcher List
+        var watcherApiUrl = "@api.routes.WatcherApi.getWatchers(project.owner, project.name, post.getNumber)?type=posts";
+        $("#watch-button").on('click', function () {
+            setTimeout(function () {
+                watcherListApi(watcherApiUrl);
+            }, 1000);
+        });
+        watcherListApi(watcherApiUrl);
 	});
 </script>
 @common.select2()
