usermenu: Sidebar prototype

--- a/app/assets/stylesheets/yobi.less
+++ b/app/assets/stylesheets/yobi.less
@@ -8,4 +8,5 @@
 @import "less/_temporary.less";
 @import "less/_markdown.less";
 @import "less/_migration.less";
+@import "less/_sidebar.less";
 @import "less/_override.less";
