--- a/app/views/layout.scala.html
+++ b/app/views/layout.scala.html
@@ -34,16 +34,35 @@
 
 </head>
 
-<body class="@theme">
+<body class="@theme" id="html-body">
+    <div id="main">
     @if(UserApp.isSiteAdminLoggedInSession){
         <div class="admin-logged-in-affix" data-spy="affix" data-offset-top="30">@Messages("user.siteAdminLoggedInAffix") <span class="small-font">@Messages("user.siteAdminLoggedInAffix.maxim")</span></div>
     }
 @partial_update_notification()
 @content
 @common.scripts()
+    </div>
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="#">About</a>
+        <a href="#">Services</a>
+        <a href="#">Clients</a>
+        <a href="#">Contact</a>
+    </div>
+    <script type="text/javascript">
+            NProgress.configure({ minimum: 0.7 });
+            /* Set the width of the side navigation to 250px and the right margin of the page content to 250px */
+            function openNav() {
+                document.getElementById("mySidenav").style.width = "350px";
+                document.getElementById("main").addEventListener("click", closeNav, true);
+            }
 
-<script type="text/javascript">
-        NProgress.configure({ minimum: 0.7 });
-</script>
+            /* Set the width of the side navigation to 0 and the left margin of the page content to 0 */
+            function closeNav() {
+                document.getElementById("mySidenav").style.width = "0";
+                document.getElementById("main").removeEventListener("click", closeNav, true);
+            }
+    </script>
 </body>
 </html>
