--- a/app/assets/stylesheets/less/_sidebar.less
+++ b/app/assets/stylesheets/less/_sidebar.less
@@ -5,31 +5,40 @@
 
 /* The side navigation menu */
 .sidenav {
-  height: 100vh; /* 100% Full-height */
   width: 0; /* 0 width - change this with JavaScript */
-  position: fixed; /* Stay in place */
+  position: absolute; /* Stay in place */
   z-index: 99999;
-  top: 0;
+  top: 40px;
   right: 0;
-  background-color: #111; /* Black*/
+  &:active{
+    border-left: 1px solid #555555;
+    border-bottom: 1px solid #555555;
+  }
+  background-color: white;
   overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 60px; /* Place content 60px from the top */
+  overflow-y: auto;
+  padding-top: 30px; /* Place content 60px from the top */
   transition: 0.2s; /* 0.5 second transition effect to slide in the sidenav */
+
+  &::-webkit-scrollbar {
+    height: 10px;
+    width: 10px;
+    background: #fff;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: #d7d4cb;
+  }
 }
+
+
 
 /* The navigation menu links */
 .sidenav a {
-  padding: 8px 8px 8px 32px;
   text-decoration: none;
-  font-size: 25px;
-  color: #818181;
+  font-size: 12px;
   display: block;
   transition: 0.3s
-}
-
-/* When you mouse over the navigation links, change their color */
-.sidenav a:hover, .offcanvas a:focus{
-  color: #f1f1f1;
 }
 
 /* Position and style the close button (top right corner) */
