my-issues: Change my issues list style
Make it more concentrative.

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3531,7 +3531,7 @@ label.issue-item-row {
 
         .title {
             color:#333;
-            font-size:15px;
+            font-size:16px;
             font-weight: 600;
 
             &.project {
@@ -3570,8 +3570,12 @@ label.issue-item-row {
         color:#999;
 
         .infos-item {
-            margin-right:12px;
+            margin-right:6px;
             float:left;
+
+            &.project-name {
+                color:#51aacc;
+            }
 
             &.infos-link-item {
                 &:hover {
@@ -3686,7 +3690,6 @@ label.issue-item-row {
 }
 
 .mileston-tag {
-    font-weight: bold;
     max-width: 135px;
     text-overflow: ellipsis;
     white-space: nowrap;
