--- a/app/views/issue/my_list.scala.html
+++ b/app/views/issue/my_list.scala.html
@@ -22,6 +22,12 @@ models.support.SearchCondition, project:Project)
     <script type="text/javascript">
       $(function(){
           $yobi.loadModule("issue.List");
+
+          $(".post-item").hover(function () {
+              $(this).css("background-color", "#fafafa");
+          }, function () {
+              $(this).css("background-color", "#fff");
+          });
       });
     </script>
 }
