--- a/app/views/issue/my_partial_list.scala.html
+++ b/app/views/issue/my_partial_list.scala.html
@@ -63,10 +63,10 @@
                 @if(issue.comments.size>0 || issue.voters.size>0) {
                 <span class="infos-item item-count-groups">
                     @if(issue.comments.size>0){
-                        @countHtml("comment2",routes.IssueApp.issue(project.owner, project.name, issue.getNumber).toString() + "#comments", issue.comments.size )
+                        @views.html.common.commentCount(routes.IssueApp.issue(project.owner, project.name, issue.getNumber).toString + "#comments", issue.comments.size)
                     }
                     @if(issue.voters.size>0){
-                        @countHtml("hearts",routes.IssueApp.issue(project.owner, project.name, issue.getNumber).toString() + "#vote", issue.voters.size, "strong" )
+                        @views.html.common.voteCount(routes.IssueApp.issue(project.owner, project.name, issue.getNumber).toString + "#vote", issue.voters.size)
                     }
                 </span>
                 }
