--- a/app/views/board/view.scala.html
+++ b/app/views/board/view.scala.html
@@ -70,7 +70,7 @@
         <div class="board-labels pull-right">
         @if(!IssueLabel.findByProject(project).isEmpty){
             @if(isAllowed(UserApp.currentUser(), post.asResource(), Operation.UPDATE)){
-                @issue.partial_select_label(IssueLabel.findByProject(project), post.getLabelIds)
+                @issue.partial_select_label(IssueLabel.findByProject(project), post.getLabelIds, "", "", project)
             } else {
                 @issue.partial_show_selected_label(post.labels.toList, "")
             }
