--- a/app/views/issue/partial_searchform.scala.html
+++ b/app/views/issue/partial_searchform.scala.html
@@ -147,7 +147,7 @@
             </a>
             }
 
-            @partial_select_label(labels, param.labelIds, "issue-option")
+            @partial_select_label(labels, param.labelIds, "issue-option", "", project)
         </div>
         }
     </div>
