--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6600,3 +6600,6 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
         width: 100% !important;
     }
 }
+.label-edit {
+    color: @blue2
+}
