--- a/app/views/issue/edit.scala.html
+++ b/app/views/issue/edit.scala.html
@@ -165,7 +165,7 @@
                         </dd>
                     </dl>
 
-                    @partial_select_label(IssueLabel.findByProject(project), issue.getLabelIds, "issue-option", "data-close-on-select=false")
+                    @partial_select_label(IssueLabel.findByProject(project), issue.getLabelIds, "issue-option", "data-close-on-select=false", project)
                 </div>
             </div>
         </div>
