--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6570,6 +6570,7 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
             .icon:before {
                 padding-right: 5px;
             }
+            font-family: @base-font-family;
         }
         .file-size {
             text-align: right;
